# BU_Selected_Project

./: .env.example  .pre-commit-config.yaml  README.md  main.py  metadata.db  pyproject.toml  ruff.toml
app/tools/: data_clean.py  data_ingest.py  eda_report.py
app/utils/: logger.py  metadata_db.py  schema.py
data/processed/: yfinance_AAPL_2023_2024.parquet
data/raw/: yfinance_AAPL_2023_2024.parquet
reports/: yfinance_AAPL_2023_2024_eda.json
tests/: test_ingest.py  test_week2.py
